--- a/.gitignore
+++ b/.gitignore
@@ -22,7 +22,7 @@ target/
 
 target/
 
-target/**/.java
+target/**/*.java
 
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
