--- a/.gitignore
+++ b/.gitignore
@@ -1,17 +1,11 @@
 
-target/
+
 
 # Compiled class file
 *.class
 
 # Log file
 *.log
-
-# BlueJ files
-*.ctxt
-
-# Mobile Tools for Java (J2ME)
-.mtj.tmp/
 
 # Package Files #
 *.jar
@@ -21,6 +15,15 @@ target/
 *.zip
 *.tar.gz
 *.rar
+
+
+target/
+
+
+target/
+
+target/**/.java
+
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
